<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SetTime</string>
    <string name="action_settings">Settings</string>

    <string name="logcat_output">logcat output</string>
    <string name="logcat_clear">logcat clear</string>
    <string name="interval_format_error">The format of interval-time is error!</string>
    <string name="introduction">Description\n\t SetTime demo</string>
    <string name="clean">Clear log</string>

    <string name="autotest_run3">SetTime</string>
    <string name="autotest_run4">Show SetTime</string>
    <string name="autotest_run5_on">Print need permission</string>
</resources>
