<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:layout_weight="1.618"
        android:background="#FFAAAAAA"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#FFAAAAAA"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/bg_textview_shape"
                android:gravity="center"
                android:text="@string/introduction"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_textview_shape"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_run3"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_selector"
                android:text="@string/autotest_run3"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_run4"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_selector"
                android:text="@string/autotest_run4"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_run5"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_selector"
                android:text="@string/autotest_run5_on"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFAAAAAA"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1.618"
                android:background="@drawable/bg_textview_shape"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/logcat_clear"
                android:textSize="18sp" />

            <Button
                android:id="@+id/clean_log"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1.0"
                android:background="@drawable/button_selector"
                android:padding="5dp"
                android:text="@string/clean"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/text_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_textview_shape"
                android:scrollbars="vertical"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>